--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-md-editor": "^3.23.5",
     "axios": "^1.5.0",
     "browserify-zlib": "^0.2.0",
     "moment": "^2.29.4",
@@ -14,10 +15,12 @@
     "react-calendar": "^4.6.0",
     "react-cookie": "^6.1.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
   },
