--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
+    "remark-react": "^9.0.1",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
   },
