--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-calendar": "^4.6.0",
     "react-cookie": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-markdown": "^8.0.7",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
