--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.1",
     "@uiw/react-md-editor": "^3.23.5",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.1",
     "browserify-zlib": "^0.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-calendar": "^4.6.0",
-    "react-cookie": "^6.1.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.8.0",
+    "react-calendar": "^4.6.0",
     "react-chrono": "^2.2.4",
+    "react-cookie": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-markdown": "^8.0.7",
