--- a/package.json
+++ b/package.json
@@ -3,45 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.8",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.1",
     "@uiw/react-md-editor": "^3.23.5",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.1",
     "browserify-zlib": "^0.2.0",
-    "moment": "^2.29.4",
-    "axios": "^1.5.0",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-calendar": "^4.6.0",
-    "react-cookie": "^6.1.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.8.0",
+    "react-calendar": "^4.6.0",
     "react-chrono": "^2.2.4",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.2",
     "react-markdown": "^8.0.7",
-    "react-quill": "^2.0.0",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0",
-    "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
-    "react-redux": "^8.1.2",
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
     "remark-react": "^9.0.1",
-    "styled-components": "^6.0.7",
     "reudx": "^1.0.7",
     "styled-components": "^6.0.7",
+    "vis-timeline": "^7.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
