--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.1",
     "@uiw/react-md-editor": "^3.23.5",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.1",
     "browserify-zlib": "^0.2.0",
+    "chart.js": "^4.4.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-calendar": "^4.6.0",
-    "react-cookie": "^6.1.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.8.0",
+    "react-calendar": "^4.6.0",
+    "react-chartjs-2": "^5.2.0",
     "react-chrono": "^2.2.4",
+    "react-cookie": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-markdown": "^8.0.7",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
