--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "browserify-zlib": "^0.2.0",
+    "clipboard": "^2.0.11",
     "font-awesome": "^4.7.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
