--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-calendar": "^4.6.0",
     "react-chrono": "^2.2.4",
     "react-cookie": "^6.1.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
